# 26_wuren_gaopin

./: README.md
CMake_Test/: CMakeLists.txt  README.md
CMake_Test/common/kalman/: CMakeLists.txt
CMake_Test/modules/A2/include/: A2.h
CMake_Test/modules/M1/: CMakeLists.txt
homework/: README.md
homework/作业1/: 作业1.cpp  作业1改动可视化源码.cpp
homework/作业2/: L2正则化.ipynb  无正则化线性回归.ipynb
homework/作业3/: 作业3.ipynb
homework/作业4/: Kmeans_Exp .ipynb
homework1/作业2-2（论文）/: README.md
homework1/基础作业1/: README.md  test.ipynb  train.ipynb
homework1/基础作业2-1/: README.md
作业1+作业2-1/: linux_practice.sh
作业1+作业2-1/linux_practice/backup/: daily_report.txt
